--- a/package.json
+++ b/package.json
@@ -1,31 +1,15 @@
 {
   "name": "trans",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "concurrently --kill-others-on-fail 'cd client && npm run dev' 'cd server && npm run start:dev'",
+    "start": "concurrently --kill-others-on-fail 'cd client && npm run start' 'cd server && npm run start:prod'"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@nestjs/core": "^8.4.3",
-    "@nestjs/platform-express": "^8.4.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.5.5"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.23",
-    "@types/react": "17.0.43",
-    "autoprefixer": "^10.4.4",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
-    "next": "^12.1.4",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23",
-    "typescript": "4.6.3"
+    "concurrently": "^7.1.0"
   }
 }
