--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,9 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-ws": "^8.4.4",
     "@nestjs/websockets": "^8.4.4",
+    "@types/cookie-parser": "^1.4.2",
     "axios": "^0.26.1",
+    "cookie-parser": "^1.4.6",
     "form-data": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
