--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.5",
     "react": "^17.0.2",
+    "react-confetti-explosion": "^1.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1"
   },
