--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "express": "^4.17.3",
+    "http-proxy-middleware": "^2.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
