--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently --kill-others-on-fail 'cd client && npm run dev' 'cd server && npm run start:dev'",
-    "start": "concurrently --kill-others-on-fail 'cd client && npm run start' 'cd server && npm run start:prod'"
+    "build": "concurrently --kill-others-on-fail 'cd client && npm run build' 'cd server && npm run build'",
+    "start": "concurrently --kill-others-on-fail 'cd client && npm run start' 'cd server && npm run start'"
   },
   "author": "",
   "license": "ISC",
