--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/ws": "^8.5.3",
+    "aos": "^2.3.4",
     "concurrently": "^7.1.0",
     "tailwindcss-animation-delay": "^1.0.7"
   }
