--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,7 @@
     "**/node_modules": true
   },
   "javascript.preferences.quoteStyle": "double",
-  "typescript.preferences.quoteStyle": "double"
+  "typescript.preferences.quoteStyle": "double",
+  "files.trimTrailingWhitespace": true,
+  "javascript.format.semicolons": "remove"
 }
