--- a/client/package.json
+++ b/client/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "next start"
   },
   "dependencies": {
-    "express": "^4.17.3",
-    "http-proxy-middleware": "^2.0.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
     "@popperjs/core": "^2.11.5",
+    "react": "17.0.2",
     "react-confetti-explosion": "^1.0.3",
-    "react-icons": "^4.3.1"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "tailwindcss-animation-delay": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
+    "@types/react-dom": "^18.0.1",
     "autoprefixer": "^10.4.4",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
