--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-confetti-explosion": "^1.0.3",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-popper": "^2.2.5",
     "tailwindcss-animation-delay": "^1.0.7"
   },
   "devDependencies": {
