--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.26.1",
     "cookie-parser": "^1.4.6",
     "form-data": "^4.0.0",
+    "http-proxy-middleware": "^2.0.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
