--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,14 @@
 events {}
 
 http {
+  ssl_session_cache   shared:SSL:10m;
+  ssl_session_timeout 10m;
+
   server {
-    listen 8080;
+    listen 8080 ssl;
+    ssl_certificate     certs/hugo.cert;
+    ssl_certificate_key certs/hugo.key;
+    keepalive_timeout   70;
 
     location /api {
       proxy_pass http://host.docker.internal:3001;
