--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently --kill-others-on-fail 'cd client && npm run dev' 'cd server && npm run start:dev'",
     "build": "concurrently --kill-others-on-fail 'cd client && npm run build' 'cd server && npm run build'",
     "start": "concurrently --kill-others-on-fail 'cd client && npm run start' 'cd server && npm run start'",
-    "nginx": "docker compose up"
+    "docker": "docker compose up"
   },
   "author": "",
   "license": "ISC",
