--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,18 @@
 services:
   nginx:
+    network_mode: host
     container_name: nginx
     image: nginx
     volumes:
-    - ./nginx:/etc/nginx/
+      - ./nginx:/etc/nginx/
     ports:
-    - "1234:8080"
+      - "1234:8080"
   postgres:
+    network_mode: host
     container_name: postgres
     image: postgres
     restart: always
     environment:
       POSTGRES_PASSWORD: example
     ports:
-    - "5432:5342"
+      - "5432:5342"
