--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,13 +5,13 @@ http {
   ssl_session_timeout 10m;
 
   server {
-    listen 1234 ssl;
+    listen 8080 ssl;
     ssl_certificate     certs/hugo.cert;
     ssl_certificate_key certs/hugo.key;
     keepalive_timeout   70;
 
     location /api {
-      proxy_pass http://host.docker.internal:3001;
+      proxy_pass http://172.17.0.1:3001;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "Upgrade";
@@ -19,7 +19,7 @@ http {
     }
 
     location / {
-      proxy_pass http://host.docker.internal:3000;
+      proxy_pass http://172.17.0.1:3000;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "Upgrade";
