--- a/server/package.json
+++ b/server/package.json
@@ -24,15 +24,23 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-ws": "^8.4.4",
     "@nestjs/websockets": "^8.4.4",
     "@prisma/client": "^3.12.0",
     "@types/cookie-parser": "^1.4.2",
     "axios": "^0.26.1",
+    "bcrypt": "^5.0.1",
+    "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "form-data": "^4.0.0",
     "http-proxy-middleware": "^2.0.6",
+    "otplib": "^12.0.1",
+    "passport-42": "^1.2.6",
+    "passport-jwt": "^4.0.0",
+    "qrcode": "^1.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
