--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/ws": "^8.5.3",
     "aos": "^2.3.4",
     "concurrently": "^7.1.0",
+    "next": "^12.1.5",
     "tailwindcss-animation-delay": "^1.0.7"
   }
 }
