--- a/server/package.json
+++ b/server/package.json
@@ -30,11 +30,13 @@
     "@nestjs/platform-ws": "^8.4.4",
     "@nestjs/websockets": "^8.4.4",
     "@prisma/client": "^3.12.0",
+    "@types/cookie": "^0.5.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/passport-jwt": "^3.0.6",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
+    "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "form-data": "^4.0.0",
     "http-proxy-middleware": "^2.0.6",
