disconnection + refreshToken ok

--- a/server/.env
+++ b/server/.env
@@ -11,7 +11,7 @@ DATABASE_URL="postgresql://postgres:lol@localhost:5432/xpong?schema=public"
 42_REDIRECT_URL="https://localhost:8080/api/auth/redirect"
 
 JWT_SECRET="temporary-sercret-key"
-JWT_EXPIRE_TIME="15m"
+JWT_EXPIRE_TIME="60"
 JWT_REFRESH_SECRET="temporary-refresh-secret-key"
 JWT_REFRESH_EXPIRE_TIME="7d"
 
