--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@types/ws": "^8.5.3",
     "aos": "^2.3.4",
     "concurrently": "^7.1.0",
