--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,7 @@ http {
     ssl_certificate     certs/hugo.cert;
     ssl_certificate_key certs/hugo.key;
     keepalive_timeout   70;
+		client_max_body_size 5M;
 
     location /api {
       proxy_pass http://host.docker.internal:3001;
