--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@nestjs/axios": "^0.0.7",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
@@ -36,11 +37,13 @@
     "@types/passport-jwt": "^3.0.6",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "class-validator": "^0.13.2",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "form-data": "^4.0.0",
     "http-proxy-middleware": "^2.0.6",
+    "node-fetch": "^3.2.4",
     "otplib": "^12.0.1",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.0",
@@ -56,6 +59,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
