--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ services:
   nginx:
     container_name: nginx
     image: nginx
-    volumes:
-      - ./nginx:/etc/nginx/
+    # volumes:
+    #   - ./nginx:/etc/nginx/
     ports:
       - "8080:8080"
     extra_hosts:
@@ -18,6 +18,15 @@ services:
       POSTGRES_DB: xpong
     ports:
       - "5432:5432"
+  client:
+    container_name: "client"
+    build: ./client/
+  server:
+    depends_on:
+      - "nginx"
+      - "postgres"
+    container_name: "server"
+    build: ./server/
 networks:
   default:
     driver: bridge
