--- a/package.json
+++ b/package.json
@@ -12,12 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
-    "@types/ws": "^8.5.3",
-    "aos": "^2.3.4",
-    "concurrently": "^7.1.0",
-    "next": "^12.1.5",
-    "prisma": "^3.13.0",
-    "tailwindcss-animation-delay": "^1.0.7"
+    "concurrently": "^7.1.0"
   }
 }
