--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,16 @@ services:
       POSTGRES_DB: xpong
     ports:
       - "5432:5432"
-  # client:
-  #   container_name: "client"
-  #   build: ./client/
-  # server:
-  #   container_name: "server"
-  #   build: ./server/
+  client:
+    container_name: "client"
+    build: ./client/
+    ports:
+      - "3000:3000"
+  server:
+    container_name: "server"
+    build: ./server/
+    ports:
+      - "3001:3001"
 networks:
   default:
     driver: bridge
