--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,11 +22,13 @@ services:
   client:
     container_name: "client"
     build: ./client/
+    restart: unless-stopped
     ports:
       - "3000:3000"
   server:
     container_name: "server"
     build: ./server/
+    restart: unless-stopped
     ports:
       - "3001:3001"
 networks:
