--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM node
+FROM node:latest
 
 RUN mkdir -p /usr/src/app
 
@@ -6,18 +6,18 @@ ENV PORT 3001
 
 WORKDIR /usr/src/app
 
-COPY package*.json /usr/src/app/
+COPY package*.json ./
 
 #USER node
 
 RUN npm install
 
-COPY . /usr/src/app/
+COPY . .
 
 RUN npx prisma generate
 
-RUN npm run build
+# RUN npm run build
 
 EXPOSE 3001
 
-CMD [ "npm", "run", "start:dev" ]
+CMD [ "sh", "entrypoint.sh" ]
