--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,16 +6,16 @@ ENV PORT 3000
 
 WORKDIR /usr/src/app
 
-COPY package*.json /usr/src/app/
+COPY package*.json ./
 
 #USER node
 
 RUN npm install
 
-COPY . /usr/src/app/
+COPY . .
 
 RUN npm run build
 
 EXPOSE 3000
 
-CMD [ "npm", "run", "dev" ]
+CMD [ "npm", "run", "start" ]
