--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.8'
 services:
   nginx:
     container_name: nginx
@@ -7,8 +8,8 @@ services:
       - ./nginx:/etc/nginx/
     ports:
       - "8080:8080"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    networks:
+      - trans
   postgres:
     container_name: postgres
     image: postgres
@@ -17,23 +18,21 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: lol
       POSTGRES_DB: xpong
-    ports:
-      - "5432:5432"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    networks:
+      - trans
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - trans
   client:
     container_name: "client"
     build: ./client/
     restart: unless-stopped
-    ports:
-      - "3000:3000"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    networks:
+      - trans
   server:
     container_name: "server"
     build: ./server/
@@ -43,13 +42,8 @@ services:
         condition: service_healthy
     links:
       - postgres
-    ports:
-      - "3001:3001"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    networks:
+      - trans
 networks:
-  default:
+  trans:
     driver: bridge
-    ipam:
-      config:
-        - subnet: 172.16.57.0/24
