--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,7 @@ http {
 		client_max_body_size 5M;
 
     location /api {
-      proxy_pass http://host.docker.internal:3001;
+      proxy_pass http://server:3001;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "Upgrade";
@@ -20,7 +20,7 @@ http {
     }
 
     location / {
-      proxy_pass http://host.docker.internal:3000;
+      proxy_pass http://client:3000;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "Upgrade";
