--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,7 +20,8 @@
     "jsx": "preserve",
     "incremental": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "noImplicitAny": false
   },
   "include": [
     "next-env.d.ts",
