--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,46 +4,34 @@ services:
     container_name: nginx
     image: nginx
     restart: unless-stopped
-    volumes:
-      - ./nginx:/etc/nginx/
-    ports:
-      - "8080:8080"
     networks:
       - trans
+    volumes:
+      - ./nginx-dev:/etc/nginx/
+    ports:
+      - "8080:8080"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   postgres:
     container_name: postgres
     image: postgres
     restart: unless-stopped
+    networks:
+      - trans
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: lol
       POSTGRES_DB: xpong
-    networks:
-      - trans
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 5s
       timeout: 5s
       retries: 5
-    networks:
-      - trans
-  client:
-    container_name: "client"
-    build: ./client/
-    restart: unless-stopped
-    networks:
-      - trans
-  server:
-    container_name: "server"
-    build: ./server/
-    restart: unless-stopped
-    depends_on:
-      postgres:
-        condition: service_healthy
-    links:
-      - postgres
-    networks:
-      - trans
+    ports:
+      - "5432:5432"
 networks:
   trans:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.16.57.0/24
